# bare-metal-stm32

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  dev_board.cfg  dev_board_debug.cfg  linker_script.ld  todo.txt
.github/workflows/: build-firmware.yml
cmsis/: .version  CMSIS_MANIFEST.txt
docs/: dma.md  linker_and_startup.md  uart.md
inc/: dma.h  uart.h
inc/config/: board_config.h
inc/drivers/: dma.h  rcc.h  uart.h
inc/hal/: uart_dma.h
scripts/: fetch_cmsis.sh
src/: Dockerfile  Makefile  dev_board.cfg  dma.c  linker_script.ld  main.c  startup.c  stubs.c  uart.c
src/drivers/: dma.c  rcc.c  uart.c
src/hal/: uart_dma.c
